--- a/Public/Home/login.css
+++ b/Public/Home/login.css
@@ -1,7 +1,108 @@
-	
-	body{
-		font:20px;
-		}
+	/* 导航以上CSS*/	
+	#container{
+				width:1002px;	
+				height:100%;
+				margin:0 auto;
+			}
+
+			body {
+				TEXT-ALIGN: center;
+				background-color:#e7ebea;
+				height:100%;
+			}
+
+			
+			.navbar{
+				 Font:15px/37PX simhei;
+				 font-weight:700;
+			}
+			
+			#header{
+				height:87px;
+				width:1002px;
+				background-color:#fff;
+			}
+			#header img{
+				float:left;
+				margin:0px 10px 0 0px;
+				
+			}
+			#ing{
+				float:right;
+				margin-top:10px;
+			}
+			
+			#pos{
+				background-color:#e7ebea;
+
+				Font:12px/20PX simhei;
+			}
+			
+			#main{
+			   width:1002px;
+			  height:600px;
+			   background-color:#fff;
+			  
+			  
+			   
+			}
+
+			#c2{
+				width:1000px;
+				
+				
+				height:100%;
+				background-color:#fff;
+				margin-top:20px;
+				border-right:solid 2px #c9cbca; 
+				margin-bottom:20px;
+			}
+
+			.navbar-brand{				
+				margin-left:20px;
+				font-size:15px;
+				
+				}
+			
+			
+			form{
+				float:left;
+				width:1002px;
+				height:100%;
+				margin:0px 15px 10px 10px;
+			}
+			.input-medium{
+				width:700px;
+				height:20px;
+				border:1px solid #000;
+				margin-left:10px;
+				color:##ff8a00;
+				font-size:25px;
+				margin-right:10px;
+				margin-top:10px;
+			}	
+			 .btn{
+				border:1px solid #000;
+				
+			 }
+			
+			#rheader img{
+			   float:left;
+			 margin-left:10px;
+			 margin-right:20px;
+			   width:450px;
+			   height:40px;
+			}
+			#city{
+				float:left;
+				margin-top:10px;
+			}
+			#rheader{
+			   float:left;
+			   margin-top:30px;
+			   width:700px;
+			   height:40px;
+			}
 	
 
 	#logintext{
@@ -13,7 +114,7 @@
 	.info1{
 		line-height:60px;
 		height:60px;
-		width:500px;
+		width:460px;
 
 		}
 	.info1 img input{
@@ -23,7 +124,7 @@
 	}
 	.info1 span{
 		width:100px; 
-		margin-left:50px;
+		margin-left:30px;
 		margin-top:5px;
 		height:15px;
 		Font:15px/15PX simhei;
@@ -33,7 +134,7 @@
 		}
 
 
-	table{
+	.logintable{
 		margin-top:100px;
 		}
 	
@@ -58,14 +159,14 @@
 		margin-right:2px;
 		}
 	.loginbox{
-		width:400px;
+		width:300px;
 	
 		height:500px;
-		padding-right:100px;
+	
 		margin-top:20px;
 		
 		text-align:center; 
-		float:right;
+		float:left;
 		
 		
 		}
@@ -83,111 +184,230 @@
 
 
 
-	/* 导航以上CSS*/	
-	#container{
-		width:1002px;	
-		margin:0 auto;
+
+	#c3{
+				width:269px;
+				float:right;
+				height:100%;
+		
+				
+				
+			}
+				#innmain{
+			   width:1002px;
+			   height:100%;
+			   background-color:#fff;
+			   border:1px solid #c9cbca;
+			   margin-top:30px;	
+			   
+			}
+			#topone{
+		width:730px;
+				height:100%;
+				float:left;
+				border:1px solid #c9cbca;
+		font-size:30px;
+		
+		background-color:#f4f4f4;
+		
+
+		
+		}
+		#inn {
+		
+			width:700px;
+				height:260px;
+				
+				
+				margin-left:30px;
+				margin-top:30px;
+			
+
+
 		}
 
-	body {
-		TEXT-ALIGN: center;
-		background-color:#e7ebea;
+
+		#innimg{
+			float:left;
+			width:300px;
+			height:230px;
+			border:2px solid #c9cbca;
+			
+				
+
+		}
+		#innimg img{
+			float:left;
+			width:270px;
+			height:200px;
+			margin:15px;
+
+			
+
+				
+
 		}
 
+		#inntxt{
+			float:left;
+			
+			width:300px;
+			height:230px;
+			margin-left:30px;
+		}
+		#inntxt table{
+		text-align:left;
+			width:300px;
+			height:230px;
+			background-color:#f4f4f4;
+			
+		}
+		 #inntxt table tr td{ border-bottom:#c9cbca dashed 1px; width:50%; background-color:#f4f4f4; }
+		#lmain{
+			width:730px;
+				height:100%;
+				float:left;
 
-	#pos{
-		background-color:#e7ebea;
+		}
+		#rmain{
+			width:266px;
+				height:100%;
+				float:right;
+				border:1px solid #c9cbca;
+		font-size:30px;
+		
+		background-color:#f4f4f4;
+		
+		 border:1px solid #c9cbca;
 		}
 		
-	#rpos{
-		TEXT-ALIGN: right;
-		height:20px;
-		Font:15px/20PX simhei;
+		#qydt table tr{
+			font-size:12px;
+			border-bottom:solid 1px #000;
+			
+			
+			background-color:#f4f4f4;
+			text-align:left;
+			
 		}
+		#qydt table th{
+			font-size:12px;
+			border-bottom:solid 1px  #c9cbca;
+			border-right:solid 1px  #c9cbca;
+			font-size:12px;
+			background-color:#f4f4f4;
+			text-align:left;
+			
+		}
+		#qydt table{
 		
-	#rpos li{
-		float:right;
-		}
-	#header{
-		height:87px;
-		width:1002px;			
-		}
-	#header img{
-		float:left;
-		margin:0px 10px 0 0px;
-		border:1px solid blue;	
-		}
-	#rheader{
-		float:left;
-		margin-top:30px;
-		width:700px;
-		height:50px;
-		}
-	#city{
-		float:left;
-		}
-	#ing span{
-		width:200px;
-		float:right;
-		}
+		height:100%;
+		width:710px;
+		margin-left:21px;
 		
-	#city span{
-	    width:70px;
-		height:15px;
-		text-align:center;
-		Font:15px/15PX simhei;
-		color:#000;
-		float:left;
+
+		}
+		#xw ul li{
+			float:left;
+			font-size:15px;
+			margin-left:10px;
+			background-color:#c9cbca;
+		}
+		#xw{
+			width:720px;
+			height:20px;
+			margin-bottom:20px;
+			
 		}
 
-	#banner span{
-		float:right;
-		TEXT-ALIGN: center;
-		margin-right:50px;
-		margin-top:10px;
+		#qydt table tr td{
+			font-size:12px;
+			border-bottom:solid 1px #000;
+			
+			margin-left:5px;
+			
+			text-align:left;
 		}
-	#nav li{
-		float:left;
-		list-style:none;
-		margin:0 1px;
-		width:90px;
-		height:37px
-        }
-	 #nav li a{
-		display:block;
-		background-color:#ff8a00;
-		width:90px;
-		height:37px;
-		text-align:center;
-		Font:15px/37PX simhei;
-		color:#fff;
+		 #qydt,#yhcx{
+				display:none;
+				height:100%
+		   }
+		   .cyxx_new li{
+				float:left;
+				font-size:12px;
+				width:200px;
+				height:30px;
+				margin-top:4px;
+		   }
+		     .cyxx_new {
+				border:solid 1px #c9cbca;
+				height:100px;;
+				width:700px;
+				margin-left:10px;
+				
+
+		   }
+
+		   #carimp img{
+				width:600px;
+				height:400px;
+				background-color:#000;
+				margin-top:30px;
+		   }
+
+
+		    #carimp{
+				width:600px;
+				height:100%;
+				
+				margin-left:65px;
+				margin-top:30px;
+		   }
+			 #zxxx span{
+				background-color:#e7ebea;
+				Font:20px/30PX simhei;
+				width:100%;
+				TEXT-ALIGN: left;
+				clear:both;
+				height:25px;
+				
+		   }
+		
+		   .rb1 ul li{		   
+		   padding-left:12px;
+		   padding-bottom:5px;
+		  
+		  
+		   font:12px "times new roman","宋体",serif;
 	   }
-	 #nav li a:hover{
-		display:block;
-		background-color:#ea6601;
-		width:90px;
-		height:37px;
-		color: #fff;
-	   }
-	 #banner span{
-		width:70px;
-		height:15px;
-		text-align:center;
-		Font:15px/15PX simhei;
-		color:#000;
-		float:right;
-		}
+		 
+		  .rb1{
+			   width:269px;;
+			   height:100%;
+			   background-color:#f4f4f4;
+				float:left;display:inline;
+				margin:0 0 20px 0;
+				 border:1px solid #c9cbca;
+				 text-align:center
+		   }
+			.rb1 img { 
+				
+				width:200;   
+				margin:10px auto
+				
+				
+		   }
+		.nav{
+				
+				Font:15px/15PX simhei;
+				margin-left:0px;	
+			}
+			
+			.nav1{
+				Font:15px/0PX simhei;
+
+			
+				margin-left:0px;	
+			}
+
 	
-	#banner{
-		width:1002px;
-		background-color:#ff7900;
-		height:40px;
-		margin:8px 0;
-		}
-	#main{
-		width:1002px;
-		height:600px;
-		background:#fff
-		}
-	  
-
