--- a/Public/Home/index.css
+++ b/Public/Home/index.css
@@ -1,7 +1,7 @@
 			#container{
-				width:1170px;	
 				height:100%;
 				margin:0 auto;
+				position: relative;
 			}
 
 			body {
@@ -9,10 +9,16 @@
 				background-color:#e7ebea;
 			}
 			#main{
-			   width:1170px;
+			   width:100%;
 			  height:100%;
 			   background-color:#fff;
 			   border:2px solid #c9cbca;
+			   float:left;
+			   }
+			   #footer{
+			   width:100%;
+			  height:100%;
+
 			   float:left;
 			   }
 			#pos{
@@ -22,9 +28,10 @@
 			}
 			
 			.nav{
-				min-width:950px;
+				min-width:1000px;
 				Font:15px/15PX simhei;
-				margin-left:0px;	
+				margin-left:0px;
+
 			}
 			
 			.nav1{
@@ -40,63 +47,63 @@
 			}
 			#header{
 				height:87px;
-				width:1170px;
+				
 				background-color:#fff;
+								font-size:14px;
 			}
 			#header img{
 				float:left;
 				margin:0px 10px 0 0px;
+				
 			
 				
 			}
 			
 			#rheader{
 			   float:left;
-			   margin-top:30px;
+			   margin-top:15px;
 			   width:800px;
 			   height:40px;
 			}
-				#rheader img{
+			#rheader p{
+			   word-break:break-word; 
+			   word-wrap:break-word;
+			   width:500px;
+			   text-align:left;
 			   float:left;
-			 margin-left:10px;
-			 margin-right:20px;
-			   width:450px;
-			   height:40px;
+			   margin-left:20px;
+			   font-size:12px;
 			}
+
+
 			#city{
 				float:left;
 				margin-top:10px;
 			}
-			
-			
-			   
-			   
-			
 
 			#c2{
 				width:1100px;
-				
 				float:left;
 				height:100%;
 				background-color:#fff;
 				margin-top:20px;
-
 				margin-bottom:20px;
 			}
 
 			.navbar-brand{				
 				margin-left:20px;
 				font-size:15px;
-				
 				}
 			
 			form{
-				float:left;
-				width:1170px;
-				border:0;
-				height:40px;
-				margin:10px 15px 10px 0px;
+				float: left;
+				width: 1170px;
+				border: 0;
+				height: 40px;
+				margin: 10px 15px 10px 15px;
+				text-align: left;
 			}
+
 			.input-medium{
 				width:700px;
 				height:20px;
@@ -107,44 +114,15 @@
 				margin-right:10px;
 				margin-top:10px;
 			}	
+
 			 .btn{
 				border:1px solid #000;
 				
 			 }
-			
-/* 		   #nav li{
-			   float:left;
-			   list-style:none;
-			   margin:0 1px;
-			   width:90px;
-			   height:37px
-		  }
-		   #nav li a{
-			   display:block;
-			   background-color:#ff8a00;
-			   width:90px;
-			   height:37px;
-			   text-align:center;
-			   Font:15px/37PX simhei;
-			   color:#fff;
-		   }
-		   #nav li a:hover{
-			   display:block;
-			   background-color:#ea6601;
-			   width:90px;
-			   height:37px;
-			   color: #fff;
-		   }
-		   
-*/		 
 
-			
-				
-
-
-#footer{
+			#footer{
 			   width:1300px;		 
-			   height:464px;
+			   height:100%;
 	
 			   margin-top:30px;
 			   float:left;
@@ -152,48 +130,55 @@
 			   }
 		
 
-	.caption p{		   
+			.caption p{		   
+				margin-top:8px;
+				text-align: center;
+				font-size:12px;
+			   }
 
-		margin-top:8px;
-	   }
-	   .thumbnail img{
-	   width:100%;
-	  height:180px;
-	   }
-	.b1{
-		width:1000px;;
-		height:130px;
-		background:#fff;
-		float:left; display:inline;
-		
-			
+			   .caption h3{		   
+				margin-top:8px;
+				text-align: center;
+				font-size:16px;
+			   }
+
+			.thumbnail img{
+			   width:100%;
+			   height:180px;
+			   }
+
+			.b1{
+				width:1000px;;
+				height:130px;
+				background:#fff;
+				float:left; display:inline;
 				margin-right:15px;
 				margin-top:12px;
-				 border:1px solid #c9cbca;
+				border:1px solid #c9cbca;
+			}
+
+			.b1 img { 
+				width:200;   
+				margin:15px; 20px;;
+				float:left;display:inline;
+				height:100px;
+				vertical-align:middle;	
+			}
+		
+			.b1 ul li{		   
+				padding-left:12px;
+				padding-bottom:5px;
+				font:12px "times new roman","瀹嬩綋",serif;
 				
-	}
-	.b1 img { 
-		width:200;   
-		margin:15px; 20px;;
-		float:left;display:inline;
-		height:100px;
-		vertical-align:middle;	
-	}
+			}
+			.b1 ul{		   
+				float:left;display:inline;
+				margin-top:15px;
+			   }
 		
-	.b1 ul li{		   
-		padding-left:12px;
-		padding-bottom:5px;
-		font:12px "times new roman","瀹嬩綋",serif;
-		
-	}
-	.b1 ul{		   
-		float:left;display:inline;
-		margin-top:15px;
-	   }
-		
-	.span3{
-		display:none;
-	}
-	.span6{
-		position:relative left=-50% top=-50% 
-	}
+			.span3{
+				display:none;
+			}
+			.span6{
+				position:relative left=-50% top=-50% 
+			}
