--- a/Public/Home/login.css
+++ b/Public/Home/login.css
@@ -21,6 +21,7 @@
 				height:87px;
 				width:1002px;
 				background-color:#fff;
+					font-size:13px;
 			}
 			#header img{
 				float:left;
@@ -38,14 +39,7 @@
 				Font:12px/20PX simhei;
 			}
 			
-			#main{
-			   width:1002px;
-			  height:600px;
-			   background-color:#fff;
-			  
-			  
-			   
-			}
+			
 
 			#c2{
 				width:1000px;
@@ -86,20 +80,23 @@
 				
 			 }
 			
-			#rheader img{
+			#rheader p{
+			   word-break:break-word; 
+			   word-wrap:break-word;
+			   width:400px;
+			   text-align:left;
 			   float:left;
-			 margin-left:10px;
-			 margin-right:20px;
-			   width:450px;
-			   height:40px;
+			   margin-left:20px;
+			   font-size:12px;
 			}
+
 			#city{
 				float:left;
 				margin-top:10px;
 			}
 			#rheader{
 			   float:left;
-			   margin-top:30px;
+			   margin-top:15px;
 			   width:700px;
 			   height:40px;
 			}
@@ -263,6 +260,12 @@
 			
 		}
 		 #inntxt table tr td{ border-bottom:#c9cbca dashed 1px; width:50%; background-color:#f4f4f4; }
+		 #main{
+		 background-color: white;
+		width: 100%;
+		height: 100%;
+		float: left;
+		 }
 		#lmain{
 			width:730px;
 				height:100%;
