--- a/Public/Home/index.css
+++ b/Public/Home/index.css
@@ -1,74 +1,17 @@
-			#container{
-				height:100%;
-				margin:0 auto;
-				position: relative;
-			}
-
-			body {
-				TEXT-ALIGN: center;
-				background-color:#e7ebea;
-			}
-			#main{
-			   width:100%;
-			  height:100%;
-			   background-color:#fff;
-			   border:2px solid #c9cbca;
-			   float:left;
-			   }
-			   #footer{
-			   width:100%;
-			  height:100%;
-
-			   float:left;
-			   }
-			#pos{
-				background-color:#e7ebea;
-
-				Font:12px/20PX simhei;
-			}
-			
 			.nav{
 				min-width:1000px;
 				Font:15px/15PX simhei;
 				margin-left:0px;
 
 			}
-			
-			.nav1{
-				Font:15px/0PX simhei;
-			
-			
-				margin-left:0px;	
-			}
-			
-			#ing{
-				float:right;
-				margin-top:10px;
-			}
-			#header{
-				height:87px;
-				
-				background-color:#fff;
-								font-size:14px;
-			}
-			#header img{
-				float:left;
-				margin:0px 10px 0 0px;
-				
-			
-				
-			}
-			
-			#rheader{
-			   float:left;
-			   margin-top:15px;
-			   width:800px;
-			   height:40px;
+									
+			body{
+				text-align:center;
 			}
 			#rheader p{
 			   word-break:break-word; 
 			   word-wrap:break-word;
-			   width:500px;
+			   width:62.5%;
 			   text-align:left;
 			   float:left;
 			   margin-left:20px;
@@ -76,17 +19,12 @@
 			}
 
 
-			#city{
-				float:left;
-				margin-top:10px;
-			}
-
-			#c2{
+           #c2{
 				width:1100px;
 				float:left;
 				height:100%;
 				background-color:#fff;
-				margin-top:20px;
+				margin-top:-20px;
 				margin-bottom:20px;
 			}
 
@@ -96,34 +34,11 @@
 				}
 			
 			form{
-				float: left;
 				width: 1170px;
-				border: 0;
-				height: 40px;
-				margin: 10px 15px 10px 15px;
-				text-align: left;
 			}
 
-			.input-medium{
-				width:700px;
-				height:20px;
-				border:1px solid #000;
-				margin-left:10px;
-				color:##ff8a00;
-				font-size:25px;
-				margin-right:10px;
-				margin-top:10px;
-			}	
-
-			 .btn{
-				border:1px solid #000;
-				
-			 }
 
 			#footer{
-			   width:1300px;		 
-			   height:100%;
-	
 			   margin-top:30px;
 			   float:left;
 			   position:relative left=50% top=50% 
@@ -154,38 +69,7 @@
 			   height:180px;
 			   }
 
-	/*		.b1{
-				width:1000px;;
-				height:130px;
-				background:#fff;
-				float:left; display:inline;
-				margin-right:15px;
-				margin-top:12px;
-				border:1px solid #c9cbca;
-			}
-
-			.b1 img { 
-				width:200;   
-				margin:15px; 20px;;
-				float:left;display:inline;
-				height:100px;
-				vertical-align:middle;	
-			}
-		
-			.b1 ul li{		   
-				padding-left:12px;
-				padding-bottom:5px;
-				font:12px "times new roman","瀹嬩綋",serif;
-				
-			}
-			.b1 ul{		   
-				float:left;display:inline;
-				margin-top:15px;
-			   }
-		*/
-			.span3{
-				display:none;
-			}
+			
 			.span6{
 				position:relative left=-50% top=-50% 
 			}
