--- a/Public/Home/public.css
+++ b/Public/Home/public.css
@@ -45,7 +45,7 @@
 				height:30px;
 				border:1px solid #e7ebea;
 				margin-left:10px;
-				color:##ff8a00;
+				color:#ff8a00;
 				font-size:25px;
 				margin-right:10px;
 				margin-top:10px;
@@ -69,6 +69,7 @@
 body {
 			
 				background-color:#e7ebea;
+                margin-top: 60px;
 			}
 #ing{
 				float:right;
